WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237387
[iOS] Further reduce hangs underneath -[WKContentView requestAutocorrectionContextWithCompletionHandler:]
https://bugs.webkit.org/show_bug.cgi?id=237387
Summary
[iOS] Further reduce hangs underneath -[WKContentView requestAutocorrectionCo...
Wenson Hsieh
Reported
2022-03-02 12:29:33 PST
rdar://89654600
Attachments
For EWS
(14.54 KB, patch)
2022-03-02 17:33 PST
,
Wenson Hsieh
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
For EWS
(14.54 KB, patch)
2022-03-02 17:39 PST
,
Wenson Hsieh
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Fix macOS build
(14.50 KB, patch)
2022-03-02 18:13 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2022-03-02 17:33:25 PST
Comment hidden (obsolete)
Created
attachment 453682
[details]
For EWS
Wenson Hsieh
Comment 2
2022-03-02 17:39:26 PST
Comment hidden (obsolete)
Created
attachment 453684
[details]
For EWS
Wenson Hsieh
Comment 3
2022-03-02 18:13:57 PST
Created
attachment 453686
[details]
Fix macOS build
Wenson Hsieh
Comment 4
2022-03-03 11:44:06 PST
> editing/spelling/spellcheck-api-crash.html
This layout test is also failing and/or flaky on a lot of other recent EWS runs.
Tim Horton
Comment 5
2022-03-03 13:21:41 PST
Comment on
attachment 453686
[details]
Fix macOS build We can ... give it a shot.
Wenson Hsieh
Comment 6
2022-03-03 13:22:30 PST
Comment on
attachment 453686
[details]
Fix macOS build (In reply to Tim Horton from
comment #5
)
> Comment on
attachment 453686
[details]
> Fix macOS build > > We can ... give it a shot.
🤞🏻
EWS
Comment 7
2022-03-03 14:09:14 PST
Committed
r290794
(
248034@main
): <
https://commits.webkit.org/248034@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 453686
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug